--- a/server-admin/src/main/resources/application.yml
+++ b/server-admin/src/main/resources/application.yml
@@ -57,11 +57,11 @@ spring:
   active: test
   # 文件上传
   servlet:
-   multipart:
-     # 单个文件大小
-     max-file-size:  10MB
-     # 设置总上传的文件大小
-     max-request-size:  20MB
+    multipart:
+      # 单个文件大小
+      max-file-size: 5GB
+      # 设置总上传的文件大小
+      max-request-size: 5GB
   # 服务模块
   devtools:
   restart:
@@ -98,7 +98,7 @@ token:
   secret: abcdefghijklmnopqrstuvwxyz
   # 令牌有效期（默认30分钟）
   expireTime: 30
- 
+
 # MyBatis配置
 mybatis:
   # 搜索指定包别名
