--- a/server-admin/src/main/resources/application.yml
+++ b/server-admin/src/main/resources/application.yml
@@ -20,41 +20,41 @@ server:
   # 服务器的HTTP端口，默认为8080
   port: 8080
   servlet:
-  # 应用的访问路径
-  context-path: /
+    # 应用的访问路径
+    context-path: /
   tomcat:
-  # tomcat的URI编码
-  uri-encoding: UTF-8
-  # 连接数满后的排队数，默认为100
-  accept-count: 1000
-  threads:
-    # tomcat最大线程数，默认为200
-    max: 800
-    # Tomcat启动初始化的线程数，默认值10
-    min-spare: 100
+    # tomcat的URI编码
+    uri-encoding: UTF-8
+    # 连接数满后的排队数，默认为100
+    accept-count: 1000
+    threads:
+      # tomcat最大线程数，默认为200
+      max: 800
+      # Tomcat启动初始化的线程数，默认值10
+      min-spare: 100
 
 # 日志配置
 logging:
   level:
-  com.igg.cloudtest: debug
-  org.springframework: warn
+    com.igg: debug
+    org.springframework: warn
 
 # 用户配置
 user:
   password:
-  # 密码最大错误次数
-  maxRetryCount: 5
-  # 密码锁定时间（默认10分钟）
-  lockTime: 10
+    # 密码最大错误次数
+    maxRetryCount: 5
+    # 密码锁定时间（默认10分钟）
+    lockTime: 10
 
 # Spring配置
 spring:
   # 资源信息
   messages:
-  # 国际化资源文件路径
-  basename: i18n/messages
+    # 国际化资源文件路径
+    basename: i18n/messages
   profiles:
-  active: test
+    active: test
   # 文件上传
   servlet:
     multipart:
@@ -64,31 +64,31 @@ spring:
       max-request-size: 5GB
   # 服务模块
   devtools:
-  restart:
-    # 热部署开关
-    enabled: true
+    restart:
+      # 热部署开关
+      enabled: true
   # redis 配置
   redis:
-  # 地址
-  host: 10.0.16.87
-  # 端口，默认为6379
-  port: 6379
-  # 数据库索引
-  database: 3
-  # 密码
-  password:
-  # 连接超时时间
-  timeout: 10s
-  lettuce:
-    pool:
-    # 连接池中的最小空闲连接
-    min-idle: 0
-    # 连接池中的最大空闲连接
-    max-idle: 8
-    # 连接池的最大数据库连接数
-    max-active: 8
-    # #连接池最大阻塞等待时间（使用负值表示没有限制）
-    max-wait: -1ms
+    # 地址
+    host: 10.0.16.87
+    # 端口，默认为6379
+    port: 6379
+    # 数据库索引
+    database: 3
+    # 密码
+    password:
+    # 连接超时时间
+    timeout: 10s
+    lettuce:
+      pool:
+        # 连接池中的最小空闲连接
+        min-idle: 0
+        # 连接池中的最大空闲连接
+        max-idle: 8
+        # 连接池的最大数据库连接数
+        max-active: 8
+        # #连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: -1ms
 
 # token配置
 token:
@@ -102,7 +102,7 @@ token:
 # MyBatis配置
 mybatis:
   # 搜索指定包别名
-  typeAliasesPackage: com.igg.cloudtest.**.domain
+  typeAliasesPackage: com.igg.**.domain
   # 配置mapper的扫描，找到所有的mapper.xml映射文件
   mapperLocations: classpath*:mapper/**/*Mapper.xml
   # 加载全局的配置文件
