新增lombok及修改依赖和日志

--- a/server-admin/src/main/resources/application-dev.yml
+++ b/server-admin/src/main/resources/application-dev.yml
@@ -55,3 +55,7 @@ spring:
         wall:
           config:
             multi-statement-allow: true
+
+springfox:
+  documentation:
+  enabled: true
