--- a/server-admin/src/main/resources/application.yml
+++ b/server-admin/src/main/resources/application.yml
@@ -106,7 +106,9 @@ mybatis:
   # 配置mapper的扫描，找到所有的mapper.xml映射文件
   mapperLocations: classpath*:mapper/**/*Mapper.xml
   # 加载全局的配置文件
-  configLocation: classpath:mybatis/mybatis-config.xml
+  global-config:
+    db-config:
+      id-type: AUTO
 
 # PageHelper分页插件
 pagehelper:
